--- a/Copiers_Log/templates/Copiers_Log/transfer_history.html
+++ b/Copiers_Log/templates/Copiers_Log/transfer_history.html
@@ -2,9 +2,16 @@
 
 
     {% block content %}
-    <h2 class="btn btn-secondary btn-lg"> Ιστορικό μεταφορών
-    </h2>
 
+
+
+<a class="btn btn-light btn-lg rounded-pill " href="{% url 'machines:machines' %}">
+
+Ιστορικό μεταφορών
+</a>
+
+<div class="container-fluid">
+<p></p>
 
     <table class="table table-hover table-bordered justify-content-center" id="data-table">
         <thead>
@@ -116,7 +123,7 @@ function goBack() {
 }
 </script>
 
-
+</div>
     {% endblock %}
 
 
