--- a/customers/templates/customers/create.html
+++ b/customers/templates/customers/create.html
@@ -4,10 +4,13 @@
 
 {% block content %}
 
-<h2 class="btn btn-primary btn-lg">
-    <i class="fas fa-user-plus">  Προσθήκη πελάτης
-    </i>
-</h2>
+
+<a class="btn btn-light btn-lg rounded-pill" href="{% url 'customers:list_customers' %}">
+    <i class="fas fa-user-plus"></i>  Προσθήκη πελάτη
+
+</a>
+<div class="container-fluid">
+<p></p>
 
  {% if form.errors %}
     <div class="alert alert-danger alert-dismissible col-12 mx-1" role="alert">
@@ -103,7 +106,7 @@ function goBack() {
   window.history.back();
 }
 </script>
-
+</div>
 {% endblock content %}
 
 
