--- a/machines/templates/machines/inactive_machines_detail.html
+++ b/machines/templates/machines/inactive_machines_detail.html
@@ -3,7 +3,13 @@
 {% load string_to_date %}
 {% block content %}
 
-    <h2 class="btn btn-secondary btn-lg">  Απενεργοποιημένα μηχανήματα </h2>
+
+
+<a class="btn btn-light btn-lg rounded-pill " href="{% url 'machines:machines' %}">
+
+     Απενεργοποιημένα μηχανήματα
+</a>
+
 
 
 
