--- a/machines/templates/machines/transfer_machine.html
+++ b/machines/templates/machines/transfer_machine.html
@@ -3,10 +3,16 @@
 {% block content %}
 
 
-<h2 class="btn btn-secondary btn-lg">
-     Μεταφορά μηχανήματος
 
-</h2>
+
+<a class="btn btn-light btn-lg rounded-pill " href="{% url 'machines:machines' %}">
+
+     Μεταφορά μηχανήματος
+</a>
+
+<div class="container-fluid">
+<p></p>
+
 
  {% if form.errors %}
     <div class="alert alert-danger alert-dismissible col-12 mx-1" role="alert">
@@ -124,7 +130,7 @@ function goBack() {
   window.history.back();
 }
 </script>
-
+</div>
 {% endblock content %}
 
 
