--- a/services/templates/services/confirm_delete.html
+++ b/services/templates/services/confirm_delete.html
@@ -1,12 +1,23 @@
 {% extends 'base.html' %}
 {% block content %}
 <form method="post">{% csrf_token %}
-    <p>Είστε σίγουροι ότι θέλετε να διαγράψετε
-       </p>
-    <table>{{ object }}</table>
+<div class="card">
+  <div class="card-body">
 
-    <input type="submit" value="Διαγραφή">
-    <button onclick="goBack()">Ακυρο</button>
+      <h5 class="btn btn-danger  rounded-pill ">Είστε σίγουροι ότι θέλετε να διαγράψετε το </h5>
+
+
+    <h5 class="card-title">{{ object }}</h5>
+    <strong>Σκοπός Επίσκεψης: </strong><p class="card-text">{{ object.Σκοπός_Επίσκεψης }}</p>
+        <strong>Ενέργειες: </strong><p class="card-text">{{ object.Ενέργειες }}</p>
+      <strong>Μηχάνημα: </strong><p class="card-text">{{ object.Copier_ID }}</p>
+    <strong>ΔΤΕ: </strong><p class="card-text">{{ object.ΔΤΕ }}</p>
+      <button type="button" class="card-link btn btn-info" onclick="goBack()">Πίσω</button>
+      <input type="submit" value="Διαγραφή" class="card-link btn btn-outline-danger">
+
+
+  </div>
+</div>
 </form>
 
 
