--- a/spareparts/templates/spareparts/detail.html
+++ b/spareparts/templates/spareparts/detail.html
@@ -1,13 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container-fluid">
 
-<h2 style="background-color:#EFF0F1;">
+<a class="btn btn-light btn-lg mb-1 rounded-pill  left badge-pill" href="{% url 'spareparts:spareparts' %}">
     <svg class="bi bi-gear-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 01-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 01.872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 012.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 012.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 01.872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 01-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 01-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 100-5.86 2.929 2.929 0 000 5.858z" clip-rule="evenodd"/>
     </svg>Ανταλλακτικά
 
-</h2>
+</a>
+
+
+<p></p>
+
 
  {% if form.errors %}
     <div class="alert alert-danger alert-dismissible col-12 mx-1" role="alert">
@@ -77,8 +82,8 @@
                     {% if context_data.Service_ID %}
                     <div class="form-group col-md-1 mb-0">
                         <a role="button" class="btn  btn-secondary"
-                           href="{% url 'services:edit_service' context_data.Service_ID %}">
-                            <h5>Συντήρηση <br>{{  context_data.Service_ID }}</h5>
+                           href="{% url 'services:edit_service' context_data.Service_ID.id %}">
+                            <h5>Συντήρηση <br>{{  context_data.Service_ID.id }}</h5>
                         </a>
 
                     {% endif %}
@@ -102,6 +107,7 @@
                     </div>
                         <div class="form-group col-md-5 mb-0">
                             <button name="add_service" type="submit" value="Αποθήκευση" class="btn btn-success">Αποθήκευση</button>
+                            <a class="btn  btn btn-danger" role="button" href="{{ form.instance.get_delete_url }}">Διαγραφή</a>
                         </div>
 
                 </div>
@@ -126,6 +132,6 @@ function goBack() {
 
 
 
-
+</div>
 
 {% endblock %}
