--- a/spareparts/templates/spareparts/spareparts_detail.html
+++ b/spareparts/templates/spareparts/spareparts_detail.html
@@ -2,8 +2,16 @@
 
 
 {% block content %}
+<div class="container-fluid">
 
-<h2> Ανταλλακτικά </h2>
+<a class="btn btn-light btn-lg mb-1 rounded-pill  left badge-pill" href="{% url 'spareparts:spareparts' %}">
+    <svg class="bi bi-gear-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 01-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 01.872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 012.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 012.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 01.872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 01-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 01-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 100-5.86 2.929 2.929 0 000 5.858z" clip-rule="evenodd"/>
+    </svg>  Ανταλλακτικά
+
+</a>
+
+
 
 
 <table class="table table-hover table-bordered" id="data-table">
@@ -29,16 +37,16 @@
 
     {% for obj in object_list  %}
     <tr align="center">
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.PARTS_NR }}</a> </td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.ΠΕΡΙΓΡΑΦΗ|slice:":30" }}</a> </td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.ΚΩΔΙΚΟΣ }} </a> </td>
-        <td><a class="btn btn-primary" role="button" href=" /customers/{{ obj.Customer_ID_id }}" name="id">{{ obj.Customer_ID }} </a></</td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.ΤΕΜΑΧΙΑ }}</a> </td>
+        <td><a href=" {{ obj.id }}" >{{ obj.PARTS_NR|default_if_none:"--" }}</a> </td>
+        <td><a href=" {{ obj.id }}" >{{ obj.ΠΕΡΙΓΡΑΦΗ|slice:":30"|default_if_none:"--" }}</a> </td>
+        <td><a href=" {{ obj.id }}" >{{ obj.ΚΩΔΙΚΟΣ|default_if_none:"--" }} </a> </td>
+        <td><a class="btn btn-primary" role="button" href=" /customers/{{ obj.Customer_ID_id }}" >{{ obj.Customer_ID|default_if_none:"--" }} </a></</td>
+        <td><a href=" {{ obj.id }}" >{{ obj.ΤΕΜΑΧΙΑ|default_if_none:"--" }}</a> </td>
 
-        <td><a role="button" class="btn btn btn-dark btn-sm" href=" /services/{{ obj.Service_ID.id }}" >{{ obj.Service_ID.ΔΤΕ }} </a></td>
+        <td><a role="button" class="btn btn btn-dark btn-sm" href=" /services/{{ obj.Service_ID.id }}" >{{ obj.Service_ID.ΔΤΕ|default_if_none:"--" }} </a></td>
 
-        <td><a role="button" class="btn btn btn-dark btn-sm" href=" /services/{{ obj.Service_ID.id }}" name="id">{{ obj.Service_ID.id }} </a></td>
-        <td><a class="btn btn-warning" role="button" href=" /Calendar/{{ obj.Calendar_ID }}" name="id">{{ obj.Calendar_ID }} </a></td>
+        <td><a role="button" class="btn btn btn-light btn-sm" href=" /services/{{ obj.Service_ID.id }}" >{{ obj.Service_ID.id|default_if_none:"--" }} </a></td>
+        <td><a class="btn btn-light" role="button" href=" /Calendar/{{ obj.Calendar_ID }}" >{{ obj.Calendar_ID|default_if_none:"--" }} </a></td>
 
     </tr>
     {% endfor %}
@@ -69,7 +77,7 @@ function goBack() {
 }
 </script>
 
-
+</div>
 {% endblock %}
 
 
