--- a/static/DataTables/datatables.css
+++ b/static/DataTables/datatables.css
@@ -14,7 +14,7 @@
  * Table styles
  */
 table.dataTable {
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   clear: both;
   border-collapse: separate;
@@ -279,7 +279,9 @@ table.dataTable td {
  * Control feature layout
  */
 .dataTables_wrapper {
+  
   position: relative;
+  font-size: 14px;
   width : 95%;
   clear: both;
   *zoom: 1;
@@ -289,8 +291,8 @@ table.dataTable td {
   float: left;
 }
 .dataTables_wrapper .dataTables_filter {
-  float: right;
-  text-align: right;
+  float: left;
+  text-align: left;
 }
 .dataTables_wrapper .dataTables_filter input {
   margin-left: 0.5em;
