--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     <!-- start -->
     <link rel="stylesheet" href="{% static 'fontawesome/5.13.0/css/all.css' %}">
 
@@ -78,7 +78,10 @@ $(document).ready(function() {
         "scrollY":        "400px",
         "scrollCollapse": true,
         "paging":         false,
-    dom: 'B<"clear">lfrtip',
+        scrollX: true,
+
+    dom: 'B<"center">lfrtip',
+
     buttons: {
         name: 'primary',
         buttons: [  {
